# turing

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  README  TODO  configure  configure.ac  copyright
include/: parseTuringConfig.h  tokenDef.h  turingGram.h  turingParserTypes.h
src/: Makefile.am  Makefile.in  parseTuringConfig.c  turing.c  turing.l  turingGram.c  turingGram.y
test/: Makefile.am  Makefile.in  test.txt  testBadHeaders.txt  testHeaderLess.txt  testHeaderMalformed.txt  testHeaderWrongPos.txt  testHeaderWrongPos2.txt  testInexistentRule.txt  testLibrary.c  testWrongRule.txt  testWrongRule2.txt  testWrongRule3.txt  testWrongRule4.txt  testWrongRule5.txt  tests.sh
